<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.Confirm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/appbar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="@dimen/textsize_confirm"
            android:paddingLeft="@dimen/paddingleft_confirm"
            android:paddingTop="@dimen/paddingtop_confirm"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_contact"
            android:textSize="@dimen/textsize_datos"
            android:paddingLeft="@dimen/paddingleft_data"
            android:layout_marginTop="@dimen/margintop_bettew_data"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="@dimen/textsize_datos"
            android:paddingLeft="@dimen/paddingleft_data"
            android:layout_marginTop="@dimen/margintop_bettew_data"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="@dimen/textsize_datos"
            android:paddingLeft="@dimen/paddingleft_data"
            android:layout_marginTop="@dimen/margintop_bettew_data"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textSize="@dimen/textsize_datos"
            android:paddingLeft="@dimen/paddingleft_data"
            android:layout_marginTop="@dimen/margintop_bettew_data"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/contact_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_description"
            android:textSize="@dimen/textsize_datos"
            android:paddingLeft="@dimen/paddingleft_data"
            android:layout_marginTop="@dimen/margintop_bettew_data"
            android:textStyle="italic|bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RisedButton"
            android:text="@string/edit_data"
            android:layout_marginTop="@dimen/margintop_bettew_data"
            android:onClick="returnMain"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>